tests/ui/derive/fail_validate_blank_struct_message.rs
#[derive(foundry::Validate)]
#[validate(messages(email(required = "  ")))]
struct BlankStructMessage {
    #[validate(required)]
    email: String,
}

fn main() {}
